firebase and buttons
++ integrated firebase into App
++ sign in page and component
++ sign in google and sign out

--- a/src/components/Sign_in/Sign_in.scss
+++ b/src/components/Sign_in/Sign_in.scss
@@ -1,8 +1,8 @@
 .sign-in-container {
   display: flex;
   flex-direction: column;  
-  //width: 380px;
-  width: 30vw;
+  //width: 30vw;
+  width: 380px;
 
   .title {
     margin: 10px 0;
